why choose us section complete

--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
       <!-- Destination section -->
       <section class="destination">
         <div class="container">
+          <div class="destination_txt">
+            <h2 class="section_title">Choose Your Destination</h2>
+            <p class="section_para">
+              Our dedicated travel experts work closely with you to understand
+              your preferences and create a customized experience.
+            </p>
+          </div>
           <div class="destination_img_holder">
             <div class="img_box img1">
               <img src="./Images/1.png" alt="" />
@@ -104,27 +111,71 @@
             </div>
             <div class="img_box img2">
               <img src="./Images/2.png" alt="" />
-              <p></p>
+              <p class="middle_txt">Indonesia</p>
             </div>
             <div class="img_box img3">
               <img src="./Images/3.png" alt="" />
-              <p></p>
+              <p class="middle_txt">Srilanka</p>
             </div>
             <div class="img_box img4">
               <img src="./Images/4.png" alt="" />
-              <p></p>
+              <p class="middle_txt">North America</p>
             </div>
             <div class="img_box img5">
               <img src="./Images/5.png" alt="" />
-              <p></p>
+              <p class="middle_txt">Kashmir</p>
             </div>
             <div class="img_box img6">
               <img src="./Images/6.png" alt="" />
-              <p></p>
+              <p class="middle_txt">Bangladesh</p>
             </div>
             <div class="img_box img7">
               <img src="./Images/7.png" alt="" />
-              <p></p>
+              <p class="middle_txt">Bandarban</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- why choose us section -->
+      <section class="choose_us">
+        <div class="container">
+          <h2 class="section_title">Why Choose Us</h2>
+          <p class="section_para">
+            Your comfort and peace of mind are our priorities. Our support team
+            is available around the clock to assist you.
+          </p>
+          <div class="boxes_holder">
+            <div class="boxs boxs1">
+              <img src="./Images/hotel.png" alt="" />
+              <h3>Handpicked Hotels</h3>
+              <p>
+                At Vix Travel, we understand that where you stay plays a pivotal
+                role in defining your travel experience. That's why we go above
+                and beyond to curate a collection of handpicked hotels that
+                embody the essence of luxury, comfort, and authenticity.
+              </p>
+            </div>
+            <div class="boxs boxs2">
+              <img src="./Images/map.png" alt="" />
+              <h3>World Class Service</h3>
+              <p>
+                At Vix Travel, we pride ourselves on delivering more than just
+                travel experiences; we are dedicated to providing world-class
+                service that turns every journey into a masterpiece of
+                unforgettable moments.
+              </p>
+            </div>
+          </div>
+          <div class="another_box_holder">
+            <div class="boxs boxs3">
+              <img src="./Images/price.png" alt="" />
+              <h3>Best Price Guarantee</h3>
+              <p>
+                we understand the importance of getting the best value for your
+                travel investment. That's why we proudly offer our Best Price
+                Guarantee—a commitment to providing you with the most
+                competitive prices for your dream journeys.
+              </p>
             </div>
           </div>
         </div>
