packages section done

--- a/index.html
+++ b/index.html
@@ -180,6 +180,80 @@
           </div>
         </div>
       </section>
+      <!-- Deals & Discounts -->
+      <section class="deals">
+        <div class="container">
+          <div class="deals_txt">
+            <h2 class="section_title">Deals & Discounts</h2>
+            <p class="section_para">
+              Plan ahead and enjoy exclusive discounts with our Early Bird
+              Specials.
+            </p>
+          </div>
+          <div class="plans_holder">
+            <div class="plans1">
+              <div class="plan">
+                <div class="plan_services">
+                  <p><i class="fa-solid fa-clock"></i>7 Day / 6 Night</p>
+                  <p><i class="fa-solid fa-users"></i>Max : 10</p>
+                  <p><i class="fa-solid fa-location-dot"></i>Malaysia</p>
+                </div>
+                <div class="plans_details">
+                  <h2>Tour To Satorini</h2>
+                  <p>
+                    Amet consectetur. Vulputate commodo felis molestie risus
+                    ornare nulla amet et. Libero commodo sagittis dignissim
+                    adipiscing quis. Habitant adipiscing.
+                  </p>
+                  <h3>Price: $1300-$1500</h3>
+                  <button class="common_btn book_btn">Book Now</button>
+                </div>
+              </div>
+            </div>
+            <div class="plans2">
+              <div class="plan">
+                <div class="plan_services">
+                  <p><i class="fa-solid fa-clock"></i>7 Day / 6 Night</p>
+                  <p><i class="fa-solid fa-users"></i>Max : 10</p>
+                  <p><i class="fa-solid fa-location-dot"></i>Malaysia</p>
+                </div>
+                <div class="plans_details">
+                  <h2>Tour To Satorini</h2>
+                  <p>
+                    Amet consectetur. Vulputate commodo felis molestie risus
+                    ornare nulla amet et. Libero commodo sagittis dignissim
+                    adipiscing quis. Habitant adipiscing.
+                  </p>
+                  <h3>Price: $1300-$1500</h3>
+                  <button class="common_btn book_btn">Book Now</button>
+                </div>
+              </div>
+            </div>
+            <div class="plans1">
+              <div class="plan">
+                <div class="plan_services">
+                  <p><i class="fa-solid fa-clock"></i>7 Day / 6 Night</p>
+                  <p><i class="fa-solid fa-users"></i>Max : 10</p>
+                  <p><i class="fa-solid fa-location-dot"></i>Malaysia</p>
+                </div>
+                <div class="plans_details">
+                  <h2>Tour To Satorini</h2>
+                  <p>
+                    Amet consectetur. Vulputate commodo felis molestie risus
+                    ornare nulla amet et. Libero commodo sagittis dignissim
+                    adipiscing quis. Habitant adipiscing.
+                  </p>
+                  <h3>Price: $1300-$1500</h3>
+                  <button class="common_btn book_btn">Book Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="package_btn">
+            <button class="common_btn">See All Packages</button>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
