newslatter section finished

--- a/index.html
+++ b/index.html
@@ -254,6 +254,65 @@
           </div>
         </div>
       </section>
+      <!-- Perfect Place -->
+      <section class="perfect_place">
+        <div class="container">
+          <div class="perfect_place_holder">
+            <div class="perfect_place_left">
+              <h2 class="section_title">A Simple Perfect Place To Get Lost</h2>
+              <p>
+                Enjoy savings without compromising on the quality of your travel
+                experience. Our Deals & Discounts are an extension of our
+                commitment to excellence.
+              </p>
+              <ul>
+                <li>
+                  Adipiscing ornare pellentesque mauris volutpat tortor vitae
+                  platea porta lacus. Lectus suspendisse nullam.
+                </li>
+                <li>
+                  Adipiscing ornare pellentesque mauris volutpat tortor vitae
+                  platea porta lacus. Lectus suspendisse nullam.
+                </li>
+              </ul>
+              <button class="common_btn see_btn">See More</button>
+            </div>
+            <div class="perfect_place_right">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/liVaabxRn5s?si=SXaCqFPPJZSgPhS6"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- newslatter -->
+      <section class="newslatter">
+        <div class="container">
+          <div class="newslatter_holder">
+            <div class="newslatter_left">
+              <h2>Newsletter</h2>
+              <p>Get your daily dose of travel news & tips. Sign up today!</p>
+              <hr />
+              <input placeholder="Enter your name" type="text" />
+              <input placeholder="Enter your email" type="text" />
+              <button class="common_btn subscribe_btn">Subscribe</button>
+            </div>
+            <div class="newslatter_right">
+              <img src="./Images/travel.png" alt="" />
+              <div class="travel_discount">
+                <span>Travel.com</span>
+                <p>Save up to 70%</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
