site done without responsive

--- a/index.html
+++ b/index.html
@@ -314,5 +314,26 @@
         </div>
       </section>
     </main>
+    <!-- footer -->
+    <footer class="footer">
+      <div class="footer_brand">
+        <img src="./Images/logo.png" alt="logo" />
+        <p>Vix <span class="travel">Travel</span></p>
+      </div>
+      <p class="footer_para">
+        Found a lower price for the same itinerary elsewhere? We've got you
+        covered.
+      </p>
+      <div class="social">
+        <a href=""><i class="fa-brands fa-twitter"></i></a>
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
+        <a href=""><i class="fa-brands fa-github"></i></a>
+      </div>
+      <div class="container">
+        <hr class="footer_devider" />
+      </div>
+      <p class="copy">&copy;Vix Travel 2022, All Rights Reserved.</p>
+    </footer>
   </body>
 </html>
