added features section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,41 @@
           </div>
         </div>
       </section>
+      <!-- features section -->
+      <section class="features">
+        <div class="container">
+          <div class="features_txt">
+            <h2 class="section_title">Our Features</h2>
+            <p class="section_para">
+              A travel agency typically offers a range of services to assist
+              individuals and groups in planning and booking their trips
+            </p>
+          </div>
+          <div class="features_holder">
+            <div class="features_box">
+              <i class="fa-solid fa-plane-up"></i>
+              <p>Flight Reservations</p>
+            </div>
+            <div class="features_box">
+              <i class="fa-solid fa-house"></i>
+              <p>Accommodation Booking</p>
+            </div>
+
+            <div class="features_box">
+              <i class="fa-solid fa-car"></i>
+              <p>Transportation Services</p>
+            </div>
+            <div class="features_box">
+              <i class="fa-solid fa-coins"></i>
+              <p>Currency Exchange</p>
+            </div>
+            <div class="features_box">
+              <i class="fa-solid fa-globe"></i>
+              <p>24/7 Support</p>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- Destination section -->
       <section class="destination">
         <div class="container">
