some changes on responsive

--- a/index.html
+++ b/index.html
@@ -249,17 +249,17 @@
               <div class="plan">
                 <div class="plan_services">
                   <p><i class="fa-solid fa-clock"></i>7 Day / 6 Night</p>
-                  <p><i class="fa-solid fa-users"></i>Max : 10</p>
+                  <p><i class="fa-solid fa-users"></i>Max : 15</p>
                   <p><i class="fa-solid fa-location-dot"></i>Malaysia</p>
                 </div>
                 <div class="plans_details">
-                  <h2>Tour To Satorini</h2>
+                  <h2>Tour To George Town</h2>
                   <p>
-                    Amet consectetur. Vulputate commodo felis molestie risus
-                    ornare nulla amet et. Libero commodo sagittis dignissim
-                    adipiscing quis. Habitant adipiscing.
+                    George Town is the capital of the Malaysian state of Penang
+                    and the core city of the George Town Conurbation, Malaysia's
+                    second largest metropolitan area
                   </p>
-                  <h3>Price: $1300-$1500</h3>
+                  <h3>Price: $1800-$2200</h3>
                   <button class="common_btn book_btn">Book Now</button>
                 </div>
               </div>
@@ -267,18 +267,18 @@
             <div class="plans2">
               <div class="plan">
                 <div class="plan_services">
-                  <p><i class="fa-solid fa-clock"></i>7 Day / 6 Night</p>
+                  <p><i class="fa-solid fa-clock"></i>10 Day / 9 Night</p>
                   <p><i class="fa-solid fa-users"></i>Max : 10</p>
-                  <p><i class="fa-solid fa-location-dot"></i>Malaysia</p>
+                  <p><i class="fa-solid fa-location-dot"></i>Colombo</p>
                 </div>
                 <div class="plans_details">
-                  <h2>Tour To Satorini</h2>
+                  <h2>Tour To Colombo</h2>
                   <p>
-                    Amet consectetur. Vulputate commodo felis molestie risus
-                    ornare nulla amet et. Libero commodo sagittis dignissim
-                    adipiscing quis. Habitant adipiscing.
+                    Colombo is the executive and judicial capital and largest
+                    city of Sri Lanka by population. According to the Brookings
+                    Institution
                   </p>
-                  <h3>Price: $1300-$1500</h3>
+                  <h3>Price: $1000-$1200</h3>
                   <button class="common_btn book_btn">Book Now</button>
                 </div>
               </div>
@@ -286,16 +286,17 @@
             <div class="plans1">
               <div class="plan">
                 <div class="plan_services">
-                  <p><i class="fa-solid fa-clock"></i>7 Day / 6 Night</p>
-                  <p><i class="fa-solid fa-users"></i>Max : 10</p>
-                  <p><i class="fa-solid fa-location-dot"></i>Malaysia</p>
+                  <p><i class="fa-solid fa-clock"></i>5 Day / 4 Night</p>
+                  <p><i class="fa-solid fa-users"></i>Max : 5</p>
+                  <p><i class="fa-solid fa-location-dot"></i>Kashmir</p>
                 </div>
                 <div class="plans_details">
-                  <h2>Tour To Satorini</h2>
+                  <h2>Tour To Kashmir</h2>
                   <p>
-                    Amet consectetur. Vulputate commodo felis molestie risus
-                    ornare nulla amet et. Libero commodo sagittis dignissim
-                    adipiscing quis. Habitant adipiscing.
+                    Kashmir is the northernmost geographical region of the
+                    Indian subcontinent. Until the mid-19th century, the term
+                    "Kashmir" denoted only the Kashmir Valley between the Great
+                    Himalayas and the Pir Panjal Range.
                   </p>
                   <h3>Price: $1300-$1500</h3>
                   <button class="common_btn book_btn">Book Now</button>
